fix height on ios

--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   flex-direction: column-reverse;
   justify-content: space-between;
-  min-height: 100vh;
-  height: 100%;
+  /* min-height: 100vh;
+  height: 100%; */
   width: 100%;
 }
 
@@ -127,7 +127,7 @@ svg g.keyframe {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
-    height: 100vh;
+    /* height: 100vh; */
     width: 100%;
   }
 
